@@ -12,6 +12,10 @@ avahi (0.6.18-4) unstable; urgency=low
   * debian/avahi-daemon.{ifupdown,resolvconf}:
     + Check if avahi-daemon-check-dns.sh is executable before executing it
       (Closes:  #419259)
+  * debian/rules:
+    + Disable gcc's strack protection on all archs except those that actually
+      support it (powerpc s390 sparc amd64 i386). Fixes FTBS on the other
+      architectures.
 
   [ Michael Biebl ]
   * Start avahi-daemon and avahi-dnsconfd as regular SysV init scripts.
@@ -47,7 +51,7 @@ avahi (0.6.18-4) unstable; urgency=low
     + Update the Vcs control field from XS-X-Vcs-Svn to XS-Vcs-Svn.
     + Add XS-Vcs-Browser control field.
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 27 Apr 2007 11:48:45 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 27 Apr 2007 12:43:08 +0200
 
 avahi (0.6.18-3) unstable; urgency=low
 
